--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,7 +13,7 @@ jobs:
   build_frontend:
     defaults:
       run:
-        working-directory: ./
+        working-directory: ./*/
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: checks build
@@ -28,7 +28,7 @@ jobs:
   run_checks:
     defaults:
       run:
-        working-directory: ./
+        working-directory: ./*/
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: run test
